--- a/src/components/UpArrow.css
+++ b/src/components/UpArrow.css
@@ -9,7 +9,7 @@
 
 .up-arrow {
     position: fixed;
-    z-index: 1;
+    z-index: 2;
     background-color: var(--anti-flash-white);
     border-radius: 1px;
     padding: 10px;
